# ophidian-based-apps

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  DesignExtended.h  LICENSE  Placer.cpp  Placer.h  README.md  build_dependencies.sh  main.cpp  place.cpp  place.h  test.cpp  timeline.md  util.cpp
input_files/simple/: osu035_stdcells.lef  simple_no_place.def
input_files/simple/cpu/: cpu.rtl.v  cpu.rtlnopwr.v  cpu.spc  cpu.xspice  cpu_bak.blif  project_vars.sh  qflow_exec.sh  qflow_vars.sh  tmp.blif
input_files/simple/cpu/layout/: cpu.cel  cpu.cfg  cpu.def  cpu.obs  cpu.pin  cpu.pl1  cpu.pl2
input_files/simple/cpu/source/: cpu.ys  cpu_mapped.blif
input_files/simple/cpu_output_wire/: cpu.rtl.v
input_files/simple/pic27ch/: pic27ch.def  pic27ch.rtl.v  pic27ch.v  pic27ch_synth.rtl.v
input_files/simple/picprj/: project_vars.sh  qflow_exec.sh  qflow_vars.sh
placer/: CMakeLists.txt  Floorplan.cpp  Floorplan.h  Floorplanner.cpp  Floorplanner.h  Placer.cpp  Placer.h  WireLength.cpp  WireLength.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test.cpp
util/: CMakeLists.txt  util.cpp  util.h
