################################################################################
# This is the CMakeLists file for your Ophidian project..
#
#   Here is your playground feel free to add your compilation targets. 
################################################################################

add_executable(ophidian_project_template 
    main.cpp
)
